feat: enhance onboarding process with new controller, service methods, and validation; add CORS configuration and error handling